2010-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdPath.R: More specific about quote-protection of path on Windows

	* inst/doc/Rcpp-introduction.Rnw: Applied several fixes kindly suggested
	  by Matt Kraai

2010-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.8

	* debian/*: Similarly updated for new release to Debian

2010-03-09  Romain Francois <romain@r-enthusiasts.com>

	* man/Rcpp.package.skeleton.Rd: some more documentation

2010-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-introduction.Rnw: Added vignette based on a recent paper

2010-03-07  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/StringTransformer.h: new class template StringTransformer
	that allows using a character by character function to modify
	elements of a string vector (example available in package RcppExamples)

	* src/Rcpp/Vector.h: string_proxy::iterator is made const char* because
	R uses a global cache for the CHARSXP

2010-03-05  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: string_proxy gains begin(), end(),
	size(), and operator[] for iterating over characters of the CHARSXP

2010-03-02  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: Vector gains a nested r_type type that is an
	integral_constant<int,RTYPE> to facilitate TMP
	* src/RcppCommon.{h,cpp}: added RCPP_CALL_VECTOR and RCPP_CALL_MATRIX
	macros to facilitate calling a function templated by T = Vector<RTYPE>
	the macro hides the boiler-plate switch( TYPEOF(x) ){ case INTSXP : ... }

2010-03-01  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: more typedef : CharacterMatrix, StringMatrix,
	GenericMatrix, ExpressionMatrix, ListMatrix

	* src/ExpressionVector.cpp : replaced by templates in Vector.h
	* src/Rcpp/Vector.h: use templates to cover ExpressionVector additional
	methods : eval() and eval(const Environment& )

2010-02-28  Romain Francois <romain@r-enthusiasts.com>
