@@ -1,0 +1,48 @@
+// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; tab-width: 8 -*-
+/* :tabSize=4:indentSize=4:noTabs=false:folding=explicit:collapseFolds=1: */
+//
+// is_convertible.h: Rcpp R/C++ interface class library -- type conversion detection
+//
+// Copyright (C) 2010	Dirk Eddelbuettel and Romain Francois
+//
+// This file is part of Rcpp.
+//
+// Rcpp is free software: you can redistribute it and/or modify it
+// under the terms of the GNU General Public License as published by
+// the Free Software Foundation, either version 2 of the License, or
+// (at your option) any later version.
+//
+// Rcpp is distributed in the hope that it will be useful, but
+// WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
+
+#ifndef Rcpp__traits__is_convertible_h
+#define Rcpp__traits__is_convertible_h
+
+namespace Rcpp{
+namespace traits{
+
+	template<typename T, typename U> class is_convertible{
+		
+		typedef char Small ;
+		typedef struct { char dummy[2] ; } Big ;
+		static Small Test( const U& ) ;
+		static Big Test(...) ;
+		static T MakeT() ;
+		
+	public:
+		
+		typedef bool value_type ;
+		static const bool value = sizeof(Test(MakeT())) == sizeof(Small) ;
+		typedef integral_constant<bool,value> type ;
+		
+	} ;
+	
+}
+}
+
+#endif
